# discrete_orderbook_events

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  README.md  generate_data
data/: market_data.csv
include/: engine.hpp  order_book.hpp
src/: engine.cpp  generate_data.cpp  main.cpp
